--- a/noorain-portfolio/src/components/Projects/ProjectCard.module.css
+++ b/noorain-portfolio/src/components/Projects/ProjectCard.module.css
@@ -6,8 +6,12 @@
     border-radius: 10px;
     background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
     box-shadow: 0 16px 14px 0 #04152d;
-    padding: 18px 24px;
-    max-width: 345px;
+    /* padding: 18px 24px;
+    max-width: 345px; */
+    padding: 20px 24px;
+    margin: 40px;
+    /* max-width: 600px; */
+    width:auto;
 }
 
 .image {
